--- a/styles/app.css
+++ b/styles/app.css
@@ -3,41 +3,71 @@
 @import "tailwindcss/utilities";
 
 @font-face {
-    font-family: Whitney;
-    font-style: normal;
-    font-weight: 300;
-    src: url(/fonts/whitney-300.woff), url(/fonts/whitney-300.woff2);
-    font-display: swap;
+  font-family: Whitney;
+  font-style: normal;
+  font-weight: 300;
+  src: url(/fonts/whitney-300.woff), url(/fonts/whitney-300.woff2);
+  font-display: swap;
 }
 
 @font-face {
-    font-family: Whitney;
-    font-style: normal;
-    font-weight: 400;
-    src: url(/fonts/whitney-400.woff), url(/fonts/whitney-400.woff2);
-    font-display: swap;
+  font-family: Whitney;
+  font-style: normal;
+  font-weight: 400;
+  src: url(/fonts/whitney-400.woff), url(/fonts/whitney-400.woff2);
+  font-display: swap;
 }
 
 @font-face {
-    font-family: Whitney;
-    font-style: normal;
-    font-weight: 500;
-    src: url(/fonts/whitney-500.woff), url(/fonts/whitney-500.woff2);
-    font-display: swap;
+  font-family: Whitney;
+  font-style: normal;
+  font-weight: 500;
+  src: url(/fonts/whitney-500.woff), url(/fonts/whitney-500.woff2);
+  font-display: swap;
 }
 
 @font-face {
-    font-family: Whitney;
-    font-style: normal;
-    font-weight: 600;
-    src: url(/fonts/whitney-600.woff), url(/fonts/whitney-600.woff2);
-    font-display: swap;
+  font-family: Whitney;
+  font-style: normal;
+  font-weight: 600;
+  src: url(/fonts/whitney-600.woff), url(/fonts/whitney-600.woff2);
+  font-display: swap;
 }
 
 @font-face {
-    font-family: Whitney;
-    font-style: normal;
-    font-weight: 700;
-    src: url(/fonts/whitney-700.woff), url(/fonts/whitney-700.woff2);
-    font-display: swap;
+  font-family: Whitney;
+  font-style: normal;
+  font-weight: 700;
+  src: url(/fonts/whitney-700.woff), url(/fonts/whitney-700.woff2);
+  font-display: swap;
+}
+
+/* react-modal opening & closing animations */
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 100ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.ReactModal__Content {
+  transform: scale(0.7);
+  opacity: 0;
+  transition: all 100ms ease-in-out;
+}
+
+.ReactModal__Content--after-open {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.ReactModal__Content--before-close {
+  opacity: 0;
+  transform: scale(0.7);
 }
